# rust-toy-c-compiler

./: .gitignore  Cargo.toml  README.md
samples/: add_2.c
src/: main.rs
src/codegen/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/validation/: mod.rs
