[package]
name = "rust-toy-c-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"                                # error handling
clap = { version = "4.5.25", features = ["derive"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
